# RelaX-Former

./: Dockerfile  Makefile  README.md  pyproject.toml
config/: server_config.json  set_constants.sh
scripts/: build_docker.sh  cherrypick.sh  convert_gt.py  convert_mp3d_dataset.py  count_unique_train_instructions.sh  create_dataset.sh  create_dataset_and_train.sh  extract_and_organize_dataset.sh  extract_json.sh  get_error.py  launch_container.sh  parse_results.sh  send_embedding.sh  send_oneshot.sh  start_server.sh  start_server_with_docker.sh  start_visual_feature_extraction_server.py  test.sh  train.sh  train_scheduler.sh
scripts/sample_data/: image_feature.npy  instruction.json  llava_feature.npy  seem_feature.npy
src/: analyze_error.py  callback_server.py  count_env.py  count_sample_per_env.py  create_database.py  create_database_json.py  create_dataset.py  create_dataset_for_switching.py  create_dataset_for_switching_hm3d.py  create_image_features_for_oneshot.py  create_jsonl_for_gpt4o_pseudo_gt.py  create_real_dataset.py  create_unlabeled_positive.py  dataloader.py  double_relaxed_contrastive_loss.py  edit_gpt4v_embedding_path.py  logger.py  main.py  merge_env.py  model.py  openai_api.py  performance_timer.py  save_gpt4v_embeddings.py  save_openai_api_results.py  save_qualitative.py  show_dataset_statistics.py  stanford_parser.py  stanford_parser_process.py
src/clip/: clip.py  model.py
src/llava/: llava.py
src/sam/: callback_server.py  image_plotter.py  sam_server.py  sam_test.py
src/sam/segment_anything/: predictor.py
